--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "ui"
   ],
   "author": "Aleksandr Komlev",
-  "contributor": ["Joran Dirk Gree"],
+  "contributor": [
+    "Joran Dirk Gree"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/automation-stack/electron-sudo/issues"
