--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "electron-sudo",
   "version": "3.0.2",
   "description": "Electron subprocess with administrative privileges, prompting the user with an OS dialog if necessary.",
-  "main": ".dist/index.js",
+  "main": "./dist/index.js",
   "author": "Aleksandr Komlev",
   "license": "MIT",
   "repository": {
