--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jorangreef/sudo-prompt.git"
+    "url": "git@github.com:automation-stack/sudo-dialog.git"
   },
   "keywords": [
     "sudo",
@@ -13,13 +13,15 @@
     "dialog",
     "prompt",
     "command",
-    "exec"
+    "exec",
+    "ui"
   ],
-  "author": "Joran Dirk Greef",
+  "author": "Aleksandr Komlev",
+  "contributor": ["Joran Dirk Gree"],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jorangreef/sudo-prompt/issues"
+    "url": "https://github.com/automation-stack/sudo-dialog/issues"
   },
-  "homepage": "https://github.com/jorangreef/sudo-prompt#readme",
+  "homepage": "https://github.com/automation-stack/sudo-dialog#readme",
   "scripts": {}
 }
